@@ -7,6 +7,9 @@
 	* reroot/libreroot/persona.h: Removed.
 	* reroot/libreroot/libreroot.c: Removed calls to other initializers.
 
+	* reroot/libreroot/memory.c (reroot_stack_string): Used mempcpy instead
+	  of strcat (should be faster).
+
 2005-06-22 Gareth Jones <gareth_jones@users.berlios.de>
 
 	* reroot/libreroot/memory.c: Used memcpy instead of strcpy.
